archive/ts-legacy/packages/core/test/test_output_24_v2.txt

[1m[46m RUN [49m[22m [36mv4.0.16 [39m[90mC:/Users/hyper/workspace/hypercode[39m

[90mstdout[2m | packages/core/test/Phase24_CodeMode.test.ts[2m > [22m[2mPhase 24: Code Mode V2 (Sandbox Integration)[2m > [22m[2mexecutes javascript code using SandboxService
[22m[39m[SandboxService] Initialized (Mode: Process Isolation)

[90mstdout[2m | packages/core/test/Phase24_CodeMode.test.ts[2m > [22m[2mPhase 24: Code Mode V2 (Sandbox Integration)[2m > [22m[2minjects tools into execution context
[22m[39m[SandboxService] Initialized (Mode: Process Isolation)

[90mstdout[2m | packages/core/test/Phase24_CodeMode.test.ts[2m > [22m[2mPhase 24: Code Mode V2 (Sandbox Integration)[2m > [22m[2mhandles async code and tool calls
[22m[39m[SandboxService] Initialized (Mode: Process Isolation)

[90mstdout[2m | packages/core/test/Phase24_CodeMode.test.ts[2m > [22m[2mPhase 24: Code Mode V2 (Sandbox Integration)[2m > [22m[2mprevents require by default
[22m[39m[SandboxService] Initialized (Mode: Process Isolation)

 [31mΓ¥»[39m packages/core/test/Phase24_CodeMode.test.ts [2m([22m[2m4 tests[22m[2m | [22m[31m4 failed[39m[2m)[22m[32m 37[2mms[22m[39m
[31m     [31m├ù[31m executes javascript code using SandboxService[39m[32m 18[2mms[22m[39m
[31m     [31m├ù[31m injects tools into execution context[39m[32m 6[2mms[22m[39m
[31m     [31m├ù[31m handles async code and tool calls[39m[32m 4[2mms[22m[39m
[31m     [31m├ù[31m prevents require by default[39m[32m 6[2mms[22m[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 4 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  packages/core/test/Phase24_CodeMode.test.ts > Phase 24: Code Mode V2 (Sandbox Integration) > executes javascript code using SandboxService
AssertionError: expected Promise{ΓÇª} to be 30 // Object.is equality

- Expected: 
30

+ Received: 
Promise {}

 Γ¥» packages/core/test/Phase24_CodeMode.test.ts:21:31
     19|         expect(result.success).toBe(true);
     20|         expect(result.output).toContain('Adding numbers...');
     21|         expect(result.result).toBe(30);
       |                               ^
     22|     });
     23| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/4]ΓÄ»

 FAIL  packages/core/test/Phase24_CodeMode.test.ts > Phase 24: Code Mode V2 (Sandbox Integration) > injects tools into execution context
AssertionError: expected Promise{ΓÇª} to be 'Processed Input' // Object.is equality

- Expected: 
"Processed Input"

+ Received: 
Promise {}

 Γ¥» packages/core/test/Phase24_CodeMode.test.ts:50:31
     48|         expect(result.success).toBe(true);
     49|         expect(toolCalled).toBe(true);
     50|         expect(result.result).toBe('Processed Input');
       |                               ^
     51|     });
     52| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/4]ΓÄ»

 FAIL  packages/core/test/Phase24_CodeMode.test.ts > Phase 24: Code Mode V2 (Sandbox Integration) > handles async code and tool calls
AssertionError: expected Promise{ΓÇª} to be 'Hello!' // Object.is equality

- Expected: 
"Hello!"

+ Received: 
Promise {}

 Γ¥» packages/core/test/Phase24_CodeMode.test.ts:76:31
     74| 
     75|         expect(result.success).toBe(true);
     76|         expect(result.result).toBe('Hello!');
       |                               ^
     77|     });
     78| 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[3/4]ΓÄ»

 FAIL  packages/core/test/Phase24_CodeMode.test.ts > Phase 24: Code Mode V2 (Sandbox Integration) > prevents require by default
AssertionError: expected true to be false // Object.is equality

- Expected
+ Received

- false
+ true

 Γ¥» packages/core/test/Phase24_CodeMode.test.ts:90:32
     88| 
     89|         // CodeModeService captures error in result.error
     90|         expect(result.success).toBe(false);
       |                                ^
     91|         expect(result.error).toContain('require');
     92|     });

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[4/4]ΓÄ»

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Unhandled Errors ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

Vitest caught 1 unhandled error during the test run.
This might cause false positive tests. Resolve unhandled errors to make sure your tests are not affected.

ΓÄ»ΓÄ»ΓÄ»ΓÄ» Unhandled Rejection ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»
Error: require('fs') is blocked in sandbox.
 Γ¥» require packages/core/src/security/SandboxService.ts:47:23
     45|             require: (name: string) => {
     46|                 // Whitelist simple packages if needed? For now, stricΓÇª
     47|                 throw new Error(`require('${name}') is blocked in sandΓÇª
       |                       ^
     48|             }
     49|         };
 Γ¥» evalmachine.<anonymous>:4:24
 Γ¥» evalmachine.<anonymous>:6:25
 Γ¥» Script.runInContext node:vm:149:12
 Γ¥» SandboxService.executeNode packages/core/src/security/SandboxService.ts:56:35
 Γ¥» SandboxService.execute packages/core/src/security/SandboxService.ts:20:25
 Γ¥» CodeExecutor.execute packages/core/src/services/CodeModeService.ts:222:72
 Γ¥» CodeModeService.executeCode packages/core/src/services/CodeModeService.ts:322:30
 Γ¥» packages/core/test/Phase24_CodeMode.test.ts:87:38
 Γ¥» node_modules/.pnpm/@vitest+runner@4.0.16/node_modules/@vitest/runner/dist/index.js:145:11

This error originated in "packages/core/test/Phase24_CodeMode.test.ts" test file. It doesn't mean the error was thrown inside the file itself, but while it was running.
ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»


[2m Test Files [22m [1m[31m1 failed[39m[22m[90m (1)[39m
[2m      Tests [22m [1m[31m4 failed[39m[22m[90m (4)[39m
[2m     Errors [22m [1m[31m1 error[39m[22m
[2m   Start at [22m 00:11:02
[2m   Duration [22m 925ms[2m (transform 195ms, setup 0ms, import 259ms, tests 37ms, environment 0ms)[22m

